--- a/src/app/doctor/doctor.component.html
+++ b/src/app/doctor/doctor.component.html
@@ -16,41 +16,41 @@
 		<p *ngIf="error.length>0" class="alert alert-danger">{{error}}</p>
 	</div>
 	<div class="col-md-1 col-sm-2 col-lg-1 col-xs-12">
-		<md-input class="" name="salutation" [(ngModel)]="NewDoctor.Salutation" placeholder="Salutation" autocomplete="off" type="text"
+		<md-input class="" name="salutation" #salutation [(ngModel)]="NewDoctor.Salutation" placeholder="Salutation" autocomplete="off" type="text"
 			required maxLength="3" [disabled]="inputDisabled"></md-input>
 	</div>
 	<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-		<md-input class="" name="firstName" [(ngModel)]="NewDoctor.FirstName" placeholder="First Name" type="text" autocomplete="off"
+		<md-input class="" name="firstName" #firstName [(ngModel)]="NewDoctor.FirstName" placeholder="First Name" type="text" autocomplete="off"
 			required maxLength="35" [disabled]="inputDisabled"></md-input>
 	</div>
 	<div class="col-md-3 col-sm-4 col-lg-3 col-xs-12">
-		<md-input class="" name="middleName" [(ngModel)]="NewDoctor.MiddleName" placeholder="Middle Name" type="text" autocomplete="off"
+		<md-input class="" name="middleName" #middleName [(ngModel)]="NewDoctor.MiddleName" placeholder="Middle Name" type="text" autocomplete="off"
 			maxLength="20" [disabled]="inputDisabled"></md-input>
 	</div>
 	<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-		<md-input class="" name="lastName" [(ngModel)]="NewDoctor.LastName" placeholder="Last Name" type="text" autocomplete="off"
+		<md-input class="" name="lastName" #lastName [(ngModel)]="NewDoctor.LastName" placeholder="Last Name" type="text" autocomplete="off"
 			required maxLength="35" [disabled]="inputDisabled"></md-input>
 	</div>
 	<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-		<md-input class="" name="primaryPhone" [(ngModel)]="NewDoctor.PrimaryPhone" placeholder="Primary Phone" autocomplete="off"
+		<md-input class="" name="primaryPhone" #primaryPhone [(ngModel)]="NewDoctor.PrimaryPhone" placeholder="Primary Phone" autocomplete="off"
 			type="text" required maxLength="15" [disabled]="inputDisabled"></md-input>
 	</div>
 	<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-		<md-input class="" name="secondaryPhone" [(ngModel)]="NewDoctor.SecondaryPhone" placeholder="Secondary Phone" autocomplete="off"
+		<md-input class="" name="secondaryPhone" #secondaryPhone [(ngModel)]="NewDoctor.SecondaryPhone" placeholder="Secondary Phone" autocomplete="off"
 			type="text" maxLength="15" [disabled]="inputDisabled"></md-input>
 	</div>
 	<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-		<md-input class="" name="email" [(ngModel)]="NewDoctor.Email" autocomplete="off" placeholder="Email" type="email" required
+		<md-input class="" name="email" #email [(ngModel)]="NewDoctor.Email" autocomplete="off" placeholder="Email" type="email" required
 			maxLength="255" [disabled]="inputDisabled"></md-input>
 	</div>
 	<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-		<md-input class="" name="client" [(ngModel)]="NewDoctor.Client" autocomplete="off" [typeahead]="clients" autocomplete="off"
+		<md-input class="" name="client" #client [(ngModel)]="NewDoctor.Client" autocomplete="off" [typeahead]="clients" autocomplete="off"
 			placeholder="Client" type="text" required [disabled]="inputDisabled"></md-input>
 	</div>
 
 
 	<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12" *ngIf="!isNewDoctor">
-		<md-checkbox name="active" [(ngModel)]="NewDoctor.Active">Active </md-checkbox>
+		<md-checkbox name="active" [(ngModel)]="NewDoctor.Active" [disabled]="inputDisabled" >Active </md-checkbox>
 	</div>
 </div>
 </div>
@@ -58,27 +58,27 @@
 	<md-toolbar color="primary">Address Details</md-toolbar>
 	<div class="col-lg-12 col-md-12 col-sm-12 mtb10">
 		<div class="col-md-6 col-sm-6 col-lg-6 col-xs-12">
-			<md-input class="" name="addressLine1" [(ngModel)]="NewDoctor.AddressLine1" placeholder="Address Line 1" autocomplete="off"
+			<md-input class="" name="addressLine1" #addressLine1 [(ngModel)]="NewDoctor.AddressLine1" placeholder="Address Line 1" autocomplete="off"
 				type="text" required maxLength="255" [disabled]="inputDisabled"></md-input>
 		</div>
 		<div class="col-md-6 col-sm-6 col-lg-6 col-xs-12">
-			<md-input class="" name="addressLine2" [(ngModel)]="NewDoctor.AddressLine2" placeholder="Address Line 2" autocomplete="off"
+			<md-input class="" name="addressLine2" #addressLine2 [(ngModel)]="NewDoctor.AddressLine2" placeholder="Address Line 2" autocomplete="off"
 				type="text" maxLength="255" [disabled]="inputDisabled"></md-input>
 		</div>
 		<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-			<md-input class="" name="country" [(ngModel)]="NewDoctor.Country" [typeahead]="countries" autocomplete="off" autocomplete="off"
+			<md-input class="" name="country" #country [(ngModel)]="NewDoctor.Country" [typeahead]="countries" autocomplete="off" autocomplete="off"
 				placeholder="Country" type="text" required [disabled]="inputDisabled" (typeaheadOnSelect)="countrySelected()"></md-input>
 		</div>
 		<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-			<md-input class="" name="state" [(ngModel)]="NewDoctor.State" autocomplete="off" [typeahead]="states" placeholder="State"
+			<md-input class="" name="state" #state [(ngModel)]="NewDoctor.State" autocomplete="off" [typeahead]="states" placeholder="State"
 				type="text" required [disabled]="inputDisabled" (typeaheadOnSelect)="stateSelected()"></md-input>
 		</div>
 		<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-			<md-input class="" name="city" [(ngModel)]="NewDoctor.City" [typeahead]="cities" autocomplete="off" placeholder="City" type="text"
+			<md-input class="" name="city" #city [(ngModel)]="NewDoctor.City" [typeahead]="cities" autocomplete="off" placeholder="City" type="text"
 				required [disabled]="inputDisabled"></md-input>
 		</div>
 		<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-			<md-input class="" name="ZIP" [(ngModel)]="NewDoctor.ZIP" placeholder="ZIP" autocomplete="off" type="text" required maxLength="10"
+			<md-input class="" name="ZIP" #zip [(ngModel)]="NewDoctor.ZIP" placeholder="ZIP" autocomplete="off" type="text" required maxLength="10"
 				[disabled]="inputDisabled"></md-input>
 		</div>
 	</div>
@@ -87,28 +87,28 @@
 	<md-toolbar color="primary">Specialty Details</md-toolbar>
 	<div class="col-lg-12 col-md-12 col-sm-12 mtb10">
 		<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-			<md-input class="" name="DictationMode" [(ngModel)]="NewDoctor.DictationMode" autocomplete="off" [typeahead]="['Dictaphone','Toll Free','Email']"
+			<md-input class="" name="dictationMode" #dictationMode [(ngModel)]="NewDoctor.DictationMode" autocomplete="off" [typeahead]="dictationModes"
 				[typeaheadMinLength]="0" placeholder="Dictation Mode" type="text" required [disabled]="inputDisabled"></md-input>
 		</div>
 		<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-			<md-input class="" name="jobLevel" [(ngModel)]="NewDoctor.JobLevel" autocomplete="off" [typeahead]="['L1','L1-L3','L1-L2-L3']"
+			<md-input class="" name="jobLevel" #jobLevel [(ngModel)]="NewDoctor.JobLevel" autocomplete="off" [typeahead]="jobLevels"
 				[typeaheadMinLength]="0" placeholder="Job Level" type="text" required [disabled]="inputDisabled"></md-input>
 		</div>
 		<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-			<md-input class="" name="voiceGrade" [(ngModel)]="NewDoctor.VoiceGrade" autocomplete="off" [typeahead]="['A','B','C','D']"
+			<md-input class="" name="voiceGrade" #voiceGrade [(ngModel)]="NewDoctor.VoiceGrade" autocomplete="off" [typeahead]="voiceGrades"
 				[typeaheadMinLength]="0" placeholder="Voice Grade" type="text" required [disabled]="inputDisabled"></md-input>
 		</div>
 		<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-			<md-input class="" name="macroPercent" [(ngModel)]="NewDoctor.MacroPercent" autocomplete="off" placeholder="Macro Percent"
+			<md-input class="" name="macroPercent" #macroPercent [(ngModel)]="NewDoctor.MacroPercent" autocomplete="off" placeholder="Macro Percent"
 				type="number" [disabled]="inputDisabled"></md-input>
 		</div>
 		<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-			<md-input class="" name="doctorGroup" [(ngModel)]="NewDoctor.DoctorGroup" autocomplete="off" placeholder="Doctor Group" [typeahead]="doctorGroups"
+			<md-input class="" name="doctorGroup" #doctorGroup [(ngModel)]="NewDoctor.DoctorGroup" autocomplete="off" placeholder="Doctor Group" [typeahead]="doctorGroups"
 				type="text" [disabled]="inputDisabled" autocomplete="off"></md-input>
 		</div>
 		<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
 			<!--Multi Select-->
-			<md-input class="" name="specialty" [(ngModel)]="specialtySelector" autocomplete="off" (typeaheadOnSelect)="specialtiesChange()"
+			<md-input class="" name="specialty" #specialty [(ngModel)]="specialtySelector" autocomplete="off" (typeaheadOnSelect)="specialtiesChange()"
 				[typeahead]="specialties" placeholder="Specialty" type="text" [disabled]="inputDisabled"></md-input>
 		</div>
 		<div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 alert alert-info" *ngIf="NewDoctor.Specialties.length>0">
