--- a/src/app/payscale/payscale.component.html
+++ b/src/app/payscale/payscale.component.html
@@ -1,5 +1,8 @@
 <div class="row">
-  <md-toolbar class="col-xs-12 col-sm-12 col-md-10 col-lg-10 col-lg-offset-1 col-md-offset-1"><span class="col-sm-12 col-xs-12 col-md-6 col-lg-6 center-align"><b>Name : </b> {{EmployeeName}}</span><span class="col-sm-12 col-xs-12 col-md-6 col-lg-6 center-align"> <b >Number : </b> {{EmployeeNumber}}</span></md-toolbar>
+  <md-toolbar class="col-xs-12 col-sm-12 col-md-10 col-lg-10 col-lg-offset-1 col-md-offset-1">
+    <span class="col-sm-12 col-xs-12 col-md-6 col-lg-6 center-align"><b>Name : </b> {{paymentStructure.EmployeeName}}</span>
+    <span class="col-sm-12 col-xs-12 col-md-6 col-lg-6 center-align"> <b >Number : </b> {{paymentStructure.EmployeeNumber}}</span>
+  </md-toolbar>
   <md-card class="col-xs-12 col-sm-12 col-md-10 col-lg-10 col-lg-offset-1 col-md-offset-1 mtb10 p0 md-elevation-z12">
     <md-card-content class="p0">
       <div>
